# cardo-python-utils

./: .gitignore  LICENSE  MANIFEST.in  README.rst  justfile  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml
docs/: README.md
docs/api_reference/python_utils/: choices.md  data_structures.md  db.md  django_utils.md  esma_choices.md  exceptions.md  imports.md  math.md  pandas_utils.md  rest.md  text.md  time.md  types_hinting.md
helper_module/: base_utils.py  calculation.py  data_structures.py  db.py  django.py  finder.py  pandas.py  rest.py  string.py  time.py  types_hinting.py
python_utils/: choices.py  data_structures.py  db.py  django_utils.py  esma_choices.py  exceptions.py  imports.py  pandas_utils.py  rest.py  text.py  time.py  types_hinting.py
python_utils/django/: README.md  __init__.py  apps.py  oidc_settings.py  settings.py  tenant_context.py  utils.py
python_utils/django/admin/: auth.py  user_group.py  views.py
python_utils/django/admin/templates/: __init__.py
python_utils/django/api/: drf.py  ninja.py  utils.py
python_utils/django/auth/: admin.py  keycloak.py  service.py
python_utils/django/celery/: __init__.py  tenant_aware_database_scheduler.py  tenant_aware_task.py
python_utils/django/db/: alias.py  routers.py  transaction.py  utils.py
python_utils/django/keycloak/: admin.py  drf.py  models.py  service.py  user_groups_changelist.html
python_utils/django/keycloak/admin/: auth.py  user_group.py
python_utils/django/keycloak/api/: drf.py  ninja.py  utils.py
python_utils/django/keycloak/tests/: __init__.py  conftest.py  utils.py
python_utils/django/management/commands/: migrateall.py  shell.py  showmigrations.py  tenant_aware_command.py
python_utils/django/middleware/: __init__.py  tenant_aware_http_middleware.py  tenant_aware_websocket_middleware.py
python_utils/django/migrations/: 0001_initial.py  0001_initial_squashed_0005_alter_userrole_id.py  0008_delete_userrole.py
python_utils/django/models/: user.py  user_group.py
python_utils/django/redis/: __init__.py  key_function.py
python_utils/django/storage/: __init__.py  tenant_aware_storage.py
python_utils/django/tests/: __init__.py  conftest.py
python_utils/keycloak/: utils.py
python_utils/keycloak/django/: service.py
python_utils/keycloak/django/admin/: auth.py  user_group.py
python_utils/keycloak/django/api/: drf.py  utils.py
python_utils/multi_tenancy/: README.md  __init__.py  apps.py  settings.py  tenant_context.py
python_utils/multi_tenancy/management/commands/: tenant_aware_command.py
python_utils/multi_tenancy/middleware/: __init__.py  tenant_http_middleware.py
python_utils/multi_tenancy/redis/: __init__.py  key_function.py
tests/: conftest.py  requirements.txt  settings.py  test_rest_utils.py  utils.py
tests/testapp/: models.py
tests/testapp/migrations/: 0001_initial.py
tests/tests_data_structures/: test_data_structures.py  tests_data.py
tests/tests_django_utils/: test_django_utils.py  tests_data.py
tests/tests_finder/: test_finder.py  tests_data.py
