[metadata]
name = cardo-python-utils
version = 0.1.0
description = Python library enhanced with a wide range of functions for different scenarios.
long_description = file: README.rst
url = 'https://github.com/CardoAI/cardo-python-utils'
author = Kristi Kotini
author_email = hello@cardoai.com
license = MIT (X11)
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
;install_requires =
;    asgiref==3.5.0
;    Django==4.0.2
;    django-model-utils==4.2.0
;    djangorestframework==3.13.1
;    numpy==1.22.2
;    pandas==1.4.0
;    python-dateutil==2.8.2
;    pytz==2021.3
;    six==1.16.0
;    sqlparse==0.4.2


[options.extras_require]
test = pytest-django

time = Django

data-structures = pytz

pandas = pandas>=1.4.0

django = Django; django-model-utils==4.2.0

rest = djangorestframework; requests

all =
    Django
    pytz
    pandas>=1.4.0
    django-model-utils==4.2.0
    djangorestframework
    requests