[metadata]
name = cardo-python-utils
version = 0.3.8
description = Python library enhanced with a wide range of functions for different scenarios.
long_description = file: README.rst
url = https://github.com/CardoAI/cardo-python-utils
author = Kristi Kotini
author_email = hello@cardoai.com
license = MIT (X11)
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8


[options.extras_require]
pandas = pandas>=1.4.0

django = Django; django-model-utils==4.2.0

rest = djangorestframework; requests

all =
    Django
    pandas>=1.4.0
    django-model-utils>=4.2.0
    djangorestframework
    requests
